--- a/CSS/cadastro.css
+++ b/CSS/cadastro.css
@@ -21,7 +21,7 @@
 	display: flex;
 	width: 20px;
 	height: 20px;
-	background-image: url('icones/arrow-left.svg');
+	background-image: url('../icones/arrow-left.svg');
 } 
 form{
 	border-radius: 10px;
@@ -92,6 +92,43 @@ form button{
 }
 form button:hover{
 	background-color: #2fb86e;
+}
+form #required{
+	color: red;
+}
+.itens-grid{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin-bottom: 70px;
+	grid-gap: 16px;
+}
+.itens-grid li{
+	 align-items: center;
+	 list-style-type: none;
+	 display: flex;
+	 flex-direction: column;
+	 background-color: #f5f5f5;
+	 padding: 32px 24px 16px;
+	 border: 2px solid #f5f5f5;
+	 border-radius: 8px;
+	 height: 140px;
+	 cursor: pointer;
+	 justify-content: space-between;
+}
+.itens-grid li span{
+	flex: 1;
+	display: flex;
+	align-items: center;
+	color: var(--title-color);
+	margin-top: 12px;
+}
+.itens-grid li.selected{
+	background-color: #e1faec;
+	border: 2px solid #32cb79;
+}
+.itens-grid li img,
+.itens-grid li span{
+	pointer-events: none;
 }
 #page-cadastro main p{
 	font-size:24px;
