--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -14,7 +14,15 @@
 	#page-home main{
 		align-items: center;
 	}
+	#page-resultado main .cards{
+		grid-template-columns: 1fr;
+	}
 }
 @media only screen and (min-width: 1550px) {
 	#page-home{background-position-x: 45vw;}
+}
+@media only screen and (max-height: 2000px) {
+	#page-home{
+		background-position-y: 120px; 
+	}	
 }
